# Mongo-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: bson-cpp.hpp  mongo-cpp.hpp
